unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/psaws__Skill_Or_Certification__c.field-meta.xml
<CustomField>
    <fullName>psaws__Skill_Or_Certification__c</fullName>
    <description>The formula field displays the list of Skills and Certifications ratings.</description>
    <formula>pse__Skill_Certification__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill or Certification</label>
    <type>Text</type>
</CustomField>