unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Approval_Status__c</fullName>
    <description>Indicates the approval status of the rating.</description>
    <inlineHelpText>Indicates the approval status of the rating.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>