unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Aspiration__c.field-meta.xml
<CustomField>
    <fullName>pse__Aspiration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates the resource's interest in acquiring or gaining additional knowledge of this skill.</description>
    <inlineHelpText>If selected, indicates the resource's interest in acquiring or gaining additional knowledge of this skill.</inlineHelpText>
    <label>Aspiration</label>
    <type>Checkbox</type>
</CustomField>