unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Certified__c.field-meta.xml
<CustomField>
    <fullName>pse__Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates that the resource's certification is accredited and active. If deselected, indicates that the certification is inactive.</description>
    <inlineHelpText>If selected, indicates that the resource's certification is accredited and active. If deselected, indicates that the certification is inactive.</inlineHelpText>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>