unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Notes__c</fullName>
    <description>You can enter information about the skill or certification rating.</description>
    <inlineHelpText>You can enter information about the skill or certification rating.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>