unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Numerical_Rating__c.field-meta.xml
<CustomField>
    <fullName>pse__Numerical_Rating__c</fullName>
    <formula>IF(
        		ISNUMBER(
        			LEFT(TEXT(pse__Rating__c),2)
        		),
				VALUE(LEFT(TEXT(pse__Rating__c),2)),
				VALUE(LEFT(TEXT(pse__Rating__c),1))
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numerical Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>