unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>pse__Years_Experience__c</fullName>
    <description>The number of years' experience a resource has in a skill.</description>
    <inlineHelpText>The number of years' experience a resource has in a skill.</inlineHelpText>
    <label>Years of Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>