unpackaged/main/default/objects/pse__Skill_Certification_Rating__c/validationRules/pse__Check_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Check_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Resource__c) &gt;  0,  NOT( pse__Resource__r.pse__Is_Resource__c))</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>Resource lookup must be set to an Contact with Is Resource = true</errorMessage>
</ValidationRule>